# lean-ml

./: .gitignore  LeanMl.lean  README.md  analysis.py  examples.py  lake-manifest.json  lakefile.toml  llms.py  oeis.py  pyproject.toml  python_exec_oeis.py
LeanMl/: Basic.lean
data/: oeis_exec_output.json  oeis_lean_source_deepseek.json  python_lean_fn_def_examples.json
deepSeek/: deepSeek_generated_examples.md  deepSeek_prover.py
