[project]
name = "lean-ml"
version = "0.1.0"
description = ""
authors = [
    {name = "Joe Stubbs",email = "joestubbs5@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipython (>=9.1.0,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
pantograph = { file = "/home/jstubbs/gits/lean4/PyPantograph/dist/pantograph-0.3.0-cp312-cp312-manylinux_2_39_x86_64.whl" }